--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -73,81 +73,233 @@
     font-size: 20px;
   }
 }
+/* Enhanced mobile responsiveness */
 @media (max-width: 768px) {
-  .button-greeting-div {
-    justify-content: space-around;
+  .greet-main {
+    width: 95%;
+    padding: 15px 5px;
+    margin-top: 0.5rem;
   }
-  .greeting-text {
-    font-size: 60px;
-    margin-top: 50px;
-  }
-  .greeting-sub {
-    margin-top: 10px;
-    font-size: 30px;
-    margin-bottom: 0px;
-    line-height: 1.1;
-    font-family: "Google Sans Bold";
-  }
-  .greeting-typewriter {
-    margin-top: 30px;
-    font-size: 30px;
-    margin-bottom: 100px;
-  }
-  .greeting-text-span {
-    font-size: 18px;
-    margin-right: 0px;
-  }
-
+  
   .greeting-main {
     display: block;
+    text-align: center;
   }
-
-  .portfolio-repo-btn-div {
-    width: 100%;
-    margin-top: 200px;
+  
+  .greeting-text-div {
+    padding: 0 10px;
+  }
+  
+  .button-greeting-div {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+  }
+  
+  .greeting-text {
+    font-size: 48px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .greeting-sub {
+    margin-top: 5px;
+    font-size: 28px;
+    margin-bottom: 20px;
+    line-height: 1.2;
+  }
+  
+  .greeting-typewriter {
+    margin-top: 10px;
+    font-size: 24px;
+    margin-bottom: 30px;
+    line-height: 1.2;
+  }
+  
+  .greeting-text-span {
+    font-size: 16px;
+    margin-right: 0px;
+    margin-top: 20px;
+    line-height: 1.6;
+    text-align: center;
+    padding: 0 10px;
+  }
+  
+  .greeting-image-div {
+    margin-top: 30px;
     display: flex;
     justify-content: center;
   }
-  .button-greeting-div {
-    display: flex;
-    margin-top: 10px;
+  
+  .entities {
+    line-height: 1.8;
   }
 }
+/* Small mobile devices */
 @media (max-width: 480px) {
+  .greet-main {
+    width: 98%;
+    padding: 10px 5px;
+  }
+  
+  .greeting-text-div {
+    padding: 0 5px;
+  }
+  
   .button-greeting-div {
-    justify-content: space-around;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    margin-top: 25px;
   }
+  
   .greeting-text {
-    font-size: 50px;
-    margin-top: -50px;
-  }
-  .greeting-sub {
+    font-size: 36px;
     margin-top: 10px;
-    font-size: 20px;
-    margin-bottom: 0px;
+    margin-bottom: 8px;
     line-height: 1.1;
-    font-family: "Google Sans Bold";
+  }
+  
+  .greeting-sub {
+    margin-top: 5px;
+    font-size: 22px;
+    margin-bottom: 15px;
+    line-height: 1.2;
   }
 
   .greeting-typewriter {
-    margin-top: 20px;
-    font-size: 25px;
-    margin-bottom: 40px;
+    margin-top: 8px;
+    font-size: 20px;
+    margin-bottom: 25px;
+    line-height: 1.2;
   }
+  
   .greeting-text-span {
-    font-size: 15px;
+    font-size: 14px;
     margin-right: 0px;
-    line-height: normal;
-    margin-bottom: 0px;
+    line-height: 1.6;
+    margin-bottom: 5px;
+    margin-top: 15px;
+    padding: 0 5px;
+    text-align: center;
   }
+  
   .greeting-main {
     display: block;
   }
+  
+  .greeting-image-div {
+    margin-top: 25px;
+  }
+  
+  .entities {
+    line-height: 1.8;
+  }
+  
+  [data-entity] {
+    padding: 0.2em 0.3em;
+    margin: 0px 0.2em;
+    font-size: 13px;
+  }
+  
+  [data-entity]::after {
+    font-size: 0.5em;
+    padding: 0.3em;
+    margin: 0px 0px 0.1rem 0.4rem;
+  }
+}
 
+/* Extra small devices */
+@media (max-width: 360px) {
+  .greeting-text {
+    font-size: 32px;
+  }
+  
+  .greeting-sub {
+    font-size: 20px;
+  }
+  
+  .greeting-typewriter {
+    font-size: 18px;
+  }
+  
+  .greeting-text-span {
+    font-size: 13px;
+    line-height: 1.5;
+  }
+  
+  [data-entity] {
+    padding: 0.15em 0.25em;
+    margin: 0px 0.15em;
+    font-size: 12px;
+  }
+}
+
+/* Additional mobile improvements */
+.greeting-text-div {
+  text-align: center;
+}
+
+/* Ensure proper text scaling */
+@media (max-width: 1024px) {
+  .greeting-text {
+    font-size: 70px;
+  }
+  
+  .greeting-sub {
+    font-size: 40px;
+  }
+  
+  .greeting-typewriter {
+    font-size: 45px;
+  }
+}
+
+/* Landscape phone orientation */
+@media (max-width: 896px) and (orientation: landscape) {
+  .greet-main {
+    padding: 10px 5px;
+    margin-top: 0;
+  }
+  
+  .greeting-text {
+    font-size: 32px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  
+  .greeting-sub {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .greeting-typewriter {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  
+  .greeting-text-span {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  
   .button-greeting-div {
-    display: flex;
-    margin-top: -10px;
-    text-align: center;
+    margin-top: 15px;
+    gap: 8px;
+  }
+}
+
+/* Better spacing for very small screens */
+@media (max-width: 320px) {
+  .greet-main {
+    padding: 8px 3px;
+  }
+  
+  .greeting-text-div {
+    padding: 0 3px;
   }
 }
 
